--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.pribas.subdep</groupId>
     <artifactId>subdep</artifactId>
-    <version>1.0</version>
+    <version>1.0.0-SNAPSHOT</version>
 
 
     <dependencies>
